test/types/records/split-init/split-init-oops1.good
split-init-oops1.chpl:15: warning: int(64)
split-init-oops1.chpl:5: In function 'test':
split-init-oops1.chpl:6: error: 'a' is not initialized and has no type
split-init-oops1.chpl:6: note: cannot find initialization point to split-init this variable
split-init-oops1.chpl:7: note: 'a' is used here before it is initialized
